@@ -10,5 +10,6 @@
         "php": "5.*",
         "elfchat": "6.0.*"
     },
-    "views": "views/"
+    "views": "views/",
+    "assets": "assets/"
 }
